# the-crock-pot

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt
.github/workflows/: build_and_test.yml
assets/recipes/: Cold Sub.crockpotrecipe  Dub Cellar.crockpotrecipe  Full Cook.crockpotrecipe  Haunted Tape.crockpotrecipe  Rusty Radio.crockpotrecipe  Warm Butter.crockpotrecipe
src/: Params.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dsp/: ChorusBlock.h  CrockBlock.h  DelayBlock.h  MonoMaker.h  README.md  ResamplerBlock.h  ReverbBlock.h  ReverseBlock.h  SaturationBlock.h  SkimmerBlock.h  TapeBlock.h  TremoloBlock.h
src/splitter/: DrumSplitter.h  LeftoversExporter.h  README.md
src/ui/: BlockPanel.h  CookPage.h  CrockPotLookAndFeel.h  README.md  SplitPage.h
tests/: SplitterTests.cpp
